[package]
name = "rodio"
version = "0.8.1"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Audio playback library"
keywords = ["audio", "playback", "gamedev"]
repository = "https://github.com/tomaka/rodio"
documentation = "http://docs.rs/rodio"

[dependencies]
claxon = { version = "0.3.0", optional = true }
cpal = { git = 'https://github.com/desttinghim/cpal', rev = '7861dd84da9b78969441caa74a62f9d60f940609' }
hound = { version = "3.3.1", optional = true }
lazy_static = "1.0.0"
lewton = { version = "0.9", optional = true }
cgmath = "0.14"
minimp3 = { version = "0.3.2", optional = true }

[features]
default = ["flac", "vorbis", "wav", "mp3"]

flac = ["claxon"]
vorbis = ["lewton"]
wav = ["hound"]
mp3 = ["minimp3"]
